# 3D-Synth

./: CmakeLists.txt  README.md  package-lock.json  package.json
plugin/: CMakeLists.txt
plugin/UI/: script.js
plugin/include/ThreeDPartOne/: PluginEditor.h  PluginProcessor.h
plugin/src/: PluginEditor.cpp  PluginProcessor.cpp
plugin/src/DSP/: FrequencyListener.h  lfo.cpp  lfo.h  synthVoice.h  velocityListener.h  waveGenerator.h
